# AI-Assistant

./: .env.example  .gitignore  assess_phase1.py  debug_engine.py  main.py  pyproject.toml  requirements.txt  scratch_warm_start.py  verify_code_inline.py  verify_config_refactoring.py  verify_engine.py  verify_fix.py  verify_refactoring.py  verify_security_gate.py
nexus/ai/: code_intel.py  orchestrator.py  parser.py  prompts.py  router.py
nexus/context/: __init__.py  assembler.py
nexus/core/: __init__.py  context.py  contracts.py  engine.py  events.py  exceptions.py  pipeline.py  restorer.py  task.py
nexus/executor/: container_executor.py  docker_exec.py  exec_interface.py  executor_factory.py  local_executor.py  safe_exec.py  validator.py  workspace.py
nexus/interfaces/: cli.py  formatter.py  telegram.py
nexus/memory/: __init__.py  manager.py  models.py  store.py
nexus/planning/: __init__.py  planner.py  schema.py
nexus/repair/: __init__.py  classifier.py  strategy.py  targeting.py
nexus/skills/: __init__.py  registry.py
nexus/utils/: config.py  history.py  logger.py  secret_scanner.py
tests/: conftest.py  test_code_intel.py  test_context.py  test_events.py  test_executor.py  test_history.py  test_hybrid_provider.py  test_memory.py  test_parser.py  test_provider_registry.py  test_router.py  test_skill_registry.py  test_stages.py  test_validator.py  test_workspace_scanner.py
tests/e2e/: conftest.py  test_pipeline_resilience.py  test_task_pipeline.py
tests/integration/: test_context_accumulation.py  test_engine_to_executor.py  (+1 more)
(+18 files in other folders)
